[package]
name = "SalesOrderManagement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "time"] }
dotenv = "0.15.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.143"
chrono = "0.4"
time = { version = "0.3.14", features = ["serde"] }